<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/back_color_yellow"
    tools:context="com.tvarkarastis.activities.ChooseClassLetter10">

    <Button
        android:layout_width="match_parent"
        android:padding="0dp"
        android:textSize="@dimen/normal_letters"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onClickAction"
        android:text="@string/classA" />

    <Button
        android:layout_width="match_parent"
        android:textSize="@dimen/normal_letters"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:layout_weight="1"
        android:onClick="onClickAction"
        android:text="@string/classB" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:layout_weight="1"
        android:textSize="@dimen/normal_letters"
        android:onClick="onClickAction"
        android:text="@string/classC" />

    <Button
        android:layout_width="match_parent"
        android:padding="0dp"
        android:textSize="@dimen/normal_letters"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onClickAction"
        android:text="@string/classD" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:textSize="@dimen/normal_letters"
        android:layout_weight="1"
        android:onClick="onClickAction"
        android:text="@string/classE" />

    <Button
        android:padding="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/normal_letters"
        android:layout_weight="1"
        android:onClick="onClickAction"
        android:text="@string/classF" />

    <Button
        android:textSize="@dimen/normal_letters"
        android:padding="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onClickAction"
        android:text="@string/classG" />

</LinearLayout>
