<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/back_color_yellow"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lt.jbgimnazija.activities.ChooseClass">

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:onClick="onClass9Clicked"
        android:textSize="@dimen/big_letters"
        android:id="@+id/dd"
        android:text="@string/class9" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="@dimen/big_letters"
        android:onClick="onClass10Clicked"
        android:layout_weight="4"
        android:text="@string/class10" />

    <Button
        android:layout_width="match_parent"
        android:textSize="@dimen/big_letters"
        android:layout_height="match_parent"
        android:onClick="onClass1112Clicked"
        android:layout_weight="3"
        android:text="@string/class1112" />

</LinearLayout>
